--- a/src/app/pages/dte/audience/dialog/dialog-panel-blast/dialog-panel-blast.component.html
+++ b/src/app/pages/dte/audience/dialog/dialog-panel-blast/dialog-panel-blast.component.html
@@ -1,10 +1,15 @@
 <div class="dialog-content-wrapper">
 
   <mat-toolbar matDialogTitle class="m-0" fxFlex="1 0 auto" fxLayout="row">
-    <div fxFlex fxLayout="row" fxLayoutAlign="space-between center">
-      <div fxFlex fxLayout="row" fxLayoutAlign="start center">
-        <span>Panel Blast</span>
-      </div>
+    <div fxFlex fxLayout="row" fxLayoutGap="24px" fxLayoutAlign="start center">
+      <span>Panel Blast</span>
+      <button
+        mat-raised-button
+        type="button"
+        (click)="export()"
+      >
+        <mat-icon>arrow_upward</mat-icon> Export Template
+      </button>
     </div>
     <!-- CLOSE DIALOG BUTTON -->
     <button mat-icon-button (click)="dialogRef.close()" aria-label="Close Dialog" [disabled]="uploading">
@@ -14,7 +19,7 @@
   </mat-toolbar>
 
   <div mat-dialog-content class="p-24 m-0" fusePerfectScrollbar>
-    <ngx-datatable class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
+    <ngx-datatable [rowClass]="getRowClass" class="material" [rows]="rows" [loadingIndicator]="loadingIndicator" [columnMode]="'force'"
       [offset]="offsetPagination" [headerHeight]="48" [footerHeight]="56" [rowHeight]="'auto'" [scrollbarH]="true"
       [reorderable]="reorderable" [selectionType]="'checkbox'" [count]="pagination.total"
       [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)">
@@ -50,4 +55,5 @@
       </ngx-datatable-column>
     </ngx-datatable>
   </div>
+  <a #downloadLink></a>
 </div>
