--- a/src/app/pages/dte/audience/dialog/dialog-panel-blast/dialog-panel-blast.component.scss
+++ b/src/app/pages/dte/audience/dialog/dialog-panel-blast/dialog-panel-blast.component.scss
@@ -145,38 +145,8 @@
       }
     }
   }
+}
 
-  // .mat-dialog-title {
-  //   border-bottom: 0.05px solid #ccc;
-  // }
-
-  // .dialog-content-wrapper {
-  //   max-height: 85vh;
-  //   display: flex;
-  //   flex-direction: column;
-  // }
-
-  // table {
-  //   border-collapse: collapse;
-  //   border-spacing: 0;
-  //   width: 100%;
-  // }
-
-  // th,
-  // td {
-  //   padding: 8px;
-  //   text-align: left;
-  //   border-bottom: 1px solid #ddd;
-  // }
-
-  // tr:nth-child(even) {
-  //   background-color: #f2f2f2;
-  // }
-
-  // .responsive {
-  //   overflow-x: auto;
-  //   max-height: 400px;
-  //   overflow-y: auto;
-  //   border: 1px solid #ddd;
-  // }
+/deep/ .row-invalid {
+  background-color: #efaea8;
 }
