--- a/src/app/pages/dte/audience/dialog/dialog-panel-blast/dialog-panel-blast.component.html
+++ b/src/app/pages/dte/audience/dialog/dialog-panel-blast/dialog-panel-blast.component.html
@@ -24,35 +24,19 @@
       [reorderable]="reorderable" [selectionType]="'checkbox'" [count]="pagination.total"
       [limit]="pagination.per_page" [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)">
 
-      <ngx-datatable-column name="Retailer_id" prop="retailer_id">
-        <ng-template ngx-datatable-cell-template let-row="row" let-value="value" let-rowIndex="rowIndex">
-          {{ row.retailer_id }}
-        </ng-template>
-      </ngx-datatable-column>
+      <ngx-datatable-column name="Retailer_id" prop="retailer_id"></ngx-datatable-column>
 
-      <ngx-datatable-column name="Copywrites" prop="copywrites">
-        <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-          {{ row.copywrites }}
-        </ng-template>
-      </ngx-datatable-column>
+      <ngx-datatable-column name="Copywrites" prop="copywrites"></ngx-datatable-column>
 
       <ngx-datatable-column name="Blasted Time" prop="blasted_time">
         <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-          {{ row.blasted_time | date:'dd/MM/yyyy' }}
+          {{ row.blasted_time }}
         </ng-template>
       </ngx-datatable-column>
 
-      <ngx-datatable-column name="Coin Submission" prop="coin_submission">
-        <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-          {{ row.coin_submission }}
-        </ng-template>
-      </ngx-datatable-column>
+      <ngx-datatable-column name="Coin Submission" prop="coin_submission"></ngx-datatable-column>
 
-      <ngx-datatable-column name="Coin Verification" prop="coin_verification">
-        <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
-          {{ row.coin_verification }}
-        </ng-template>
-      </ngx-datatable-column>
+      <ngx-datatable-column name="Coin Verification" prop="coin_verification"></ngx-datatable-column>
     </ngx-datatable>
   </div>
   <a #downloadLink></a>
