--- a/src/app/pages/dte/task-sequencing/index/task-sequencing-index.component.html
+++ b/src/app/pages/dte/task-sequencing/index/task-sequencing-index.component.html
@@ -95,7 +95,7 @@
                   <!-- <button mat-icon-button *ngIf="!permission?.ubah" color="" (click)="directDetail(row)">
                     <mat-icon class="secondary-text">assignment</mat-icon>
                   </button> -->
-                  <button id="btn-duplikat" mat-icon-button color="" matTooltip="Duplikat" (click)="duplicate(row)">
+                  <button id="btn-duplikat" mat-icon-button color="" matTooltip="Duplikat" (click)="duplicate(row)" [disabled]="row.type === 'personalization'">
                     <mat-icon class="secondary-text">content_copy</mat-icon>
                   </button>
                   <button id="btn-request_file" type="button" mat-icon-button color="" matTooltip="Request File" (click)="requestFile(row)"
