add column for error validation

--- a/src/app/pages/dte/audience/dialog/dialog-panel-blast/dialog-panel-blast.component.html
+++ b/src/app/pages/dte/audience/dialog/dialog-panel-blast/dialog-panel-blast.component.html
@@ -35,8 +35,8 @@
       </ngx-datatable-column>
 
       <ngx-datatable-column name="Coin Submission" prop="coin_submission"></ngx-datatable-column>
-
       <ngx-datatable-column name="Coin Verification" prop="coin_verification"></ngx-datatable-column>
+      <ngx-datatable-column name="Error Validation" prop="error_validation"></ngx-datatable-column>
     </ngx-datatable>
   </div>
   <a #downloadLink></a>
