--- a/src/app/pages/dte/task-sequencing/edit/task-sequencing-edit.component.html
+++ b/src/app/pages/dte/task-sequencing/edit/task-sequencing-edit.component.html
@@ -13,7 +13,7 @@
       </div>
       <a #downloadLink></a>
       <div fxLayout="column">
-        <button id="btn-import-coin" mat-raised-button style="border: 1px solid" (click)="import()" *ngIf="!isDetail"
+        <button id="btn-import-coin" mat-raised-button style="border: 1px solid" (click)="checkReminder()" *ngIf="!isDetail"
         [disabled]="!ENABLE_EXPORT_IF.includes(taskSequenceForm.get('import_coin_status').value)">
           <mat-icon>arrow_downward</mat-icon>
           IMPORT COIN
