--- a/src/app/pages/task-sequencing/task-sequencing/create/task-sequencing-create.component.html
+++ b/src/app/pages/task-sequencing/task-sequencing/create/task-sequencing-create.component.html
@@ -27,7 +27,7 @@
             </mat-form-field>
 
             <mat-form-field fxFlex="100" class="is-light form-primary">
-              <!-- <mat-select placeholder="Pilih Trade Program" formControlName="trade_program" id="trade_program">
+              <!-- <mat-select placeholder="{{'dte.dte_automation.text8' | translate}}" formControlName="trade_program" id="trade_program">
                 <mat-option *ngFor="let item of programs" [value]="item.id">{{item.name}}</mat-option>
               </mat-select> -->
               <mat-select formControlName="trade_program" placeholder="Pilih Group Trade Program" id="trade_program" #singleSelect>
