--- a/src/app/pages/dte/task-sequencing/duplicate/task-sequencing-duplicate.component.html
+++ b/src/app/pages/dte/task-sequencing/duplicate/task-sequencing-duplicate.component.html
@@ -43,10 +43,10 @@
             </mat-form-field>
 
             <mat-form-field fxFlex="100" class="is-light form-primary">
-              <!-- <mat-select placeholder="Pilih Trade Program" formControlName="trade_program" id="trade_program">
+              <!-- <mat-select placeholder="{{'dte.dte_automation.text8' | translate}}" formControlName="trade_program" id="trade_program">
                 <mat-option *ngFor="let item of programs" [value]="item.id">{{item.name}}</mat-option>
               </mat-select> -->
-              <mat-select formControlName="trade_creator_id" placeholder="Pilih Trade Program" id="tradeCreatorId" (click)="selectForm('trade')" (selectionChange)="selectChange($event)" #singleSelect>
+              <mat-select formControlName="trade_creator_id" placeholder="{{'dte.dte_automation.text8' | translate}}" id="tradeCreatorId" (click)="selectForm('trade')" (selectionChange)="selectChange($event)" #singleSelect>
                 <ngx-mat-select-search id="select-search-trade" [formControl]="filterGTP" [placeholderLabel]="'Cari Trade Program...'"
                   [noEntriesFoundLabel]="'Tidak ada Trade Program yang ditemukan'" [clearSearchInput]="false"></ngx-mat-select-search>
                 <mat-option *ngFor="let item of filteredGTP | async" [value]="item.id">
