--- a/src/app/pages/dte/audience/dialog/dialog-panel-blast/dialog-panel-blast.component.html
+++ b/src/app/pages/dte/audience/dialog/dialog-panel-blast/dialog-panel-blast.component.html
@@ -2,7 +2,7 @@
 
   <mat-toolbar matDialogTitle class="m-0" fxFlex="1 0 auto" fxLayout="row">
     <div fxFlex fxLayout="row" fxLayoutGap="24px" fxLayoutAlign="start center">
-      <span>Panel Blast</span>
+      <span>{{'dte.audience.panel_blast' | translate}}</span>
       <button
         mat-raised-button
         type="button"
